// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`executeScenario > builds preview plan with overrides and branch decisions 1`] = `
"Demo (demo) — target mode: live

Overrides:
  channel = beta (override)

Flow: main
  - [prompt:select] channel
    question: Select release channel
    answer: beta (override)
    options:
      • Alpha (alpha)
      • Beta (beta)
  - [branch] branch
    branch rationales: (hidden — use --plan-expand branches)
    default → alpha-step
    selected → beta-step
  - [command] beta-step
    • deploy --channel beta
      details: (hidden — use --plan-expand templates)
      env diffs: (hidden — use --plan-expand env)
  - [message] complete
    level: success
    text: Done!
"
`;

exports[`executeScenario > builds preview plan with overrides and branch decisions 2`] = `
"Demo (demo) — target mode: live

Overrides:
  channel = beta (override)

Flow: main
  - [prompt:select] channel
    question: Select release channel
    answer: beta (override)
    options:
      • Alpha (alpha)
      • Beta (beta)
  - [branch] branch
    • answers.channel === 'beta' → beta-step [true]
    default → alpha-step
    selected → beta-step
  - [command] beta-step
    • deploy --channel beta
      shell: true
      preset: shell
      summary: Deploy beta channel
      env:
        PRESET=1 [preset]
        DEFAULT=beta [defaults]
        LOCAL=value [command]
  - [message] complete
    level: success
    text: Done!
"
`;
